--- a/src/css/InputDropDown.css
+++ b/src/css/InputDropDown.css
@@ -1,7 +1,12 @@
+.btn-group {
+  position: relative;
+  top: -5px !important;
+  left: 20px !important;
+}
 .dropdown-toggle {
   position: relative;
-  top: 2px;
-  left: -15px;
+  top: -4px;
+  left: 5px;
 }
 
 .drop-container {
